testsuite/tests/typing-recmod/t02bad.compilers.reference
File "t02bad.ml", line 10, characters 15-35:
Error: The definition of A.t contains a cycle:
       B.t
